Margin gap under info section fixed

--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #1f2937;
-
-
     margin: 0;
 }
 
@@ -79,6 +77,7 @@ body {
     flex-direction: column;
 
     align-items: center;
+    margin-bottom: -16px;
 }
 
 .imgblock-info {
@@ -104,6 +103,10 @@ body {
 .info-p1 {
     font-size: 14px;
     color: #1f2937;
+}
+
+.quote-section {
+    background-color: #e5e7eb;
 }
 
 a {
